src/grammarDKNParser.py
# Generated from c:/Users/Darie/Documents/Uni/Semestre V/Lenguajes de Programacion y Transduccion/DKNexus/grammar/grammarDKN.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class grammarDKNParser ( Parser ):

    grammarFileName = "grammarDKN.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "','", "')'", "'{'", "'}'", "'print'", 
                     "';'", "'return'", "'push'", "'enqueue'", "'='", "'if'", 
                     "'for'", "'while'", "'^'", "'*'", "'/'", "'%'", "'+'", 
                     "'-'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
                     "'sin'", "'cos'", "'tan'", "'tanh'", "'sqrt'", "'root'", 
                     "'log'", "'log10'", "'abs'", "'floor'", "'ceil'", "'trans'", 
                     "'inv'", "'pop'", "'dequeue'", "'['", "']'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'function'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NUMBER", "STRING", "INVALID_ID", "LINE_COMMENT", 
                      "FUNCTION", "PI", "EULER", "INF", "VARIABLE", "WS" ]

    RULE_program = 0
    RULE_programItem = 1
    RULE_functionDef = 2
    RULE_statement = 3
    RULE_expr = 4

    ruleNames =  [ "program", "programItem", "functionDef", "statement", 
                   "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    NUMBER=44
    STRING=45
    INVALID_ID=46
    LINE_COMMENT=47
    FUNCTION=48
    PI=49
    EULER=50
    INF=51
    VARIABLE=52
    WS=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.ProgramItemContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.ProgramItemContext,i)


        def getRuleIndex(self):
            return grammarDKNParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = grammarDKNParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.programItem()
                self.state = 13 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8787296796047170) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return grammarDKNParser.RULE_programItem

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ItemStmtContext(ProgramItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ProgramItemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self):
            return self.getTypedRuleContext(grammarDKNParser.StatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItemStmt" ):
                return visitor.visitItemStmt(self)
            else:
                return visitor.visitChildren(self)


    class ItemFuncContext(ProgramItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ProgramItemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionDef(self):
            return self.getTypedRuleContext(grammarDKNParser.FunctionDefContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItemFunc" ):
                return visitor.visitItemFunc(self)
            else:
                return visitor.visitChildren(self)



    def programItem(self):

        localctx = grammarDKNParser.ProgramItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programItem)
        try:
            self.state = 17
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [48]:
                localctx = grammarDKNParser.ItemFuncContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 15
                self.functionDef()
                pass
            elif token in [1, 6, 8, 9, 10, 12, 13, 14, 20, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 44, 45, 49, 50, 51, 52]:
                localctx = grammarDKNParser.ItemStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 16
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return grammarDKNParser.RULE_functionDef

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionDefRuleContext(FunctionDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.FunctionDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNCTION(self):
            return self.getToken(grammarDKNParser.FUNCTION, 0)
        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(grammarDKNParser.VARIABLE)
            else:
                return self.getToken(grammarDKNParser.VARIABLE, i)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.StatementContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefRule" ):
                return visitor.visitFunctionDefRule(self)
            else:
                return visitor.visitChildren(self)



    def functionDef(self):

        localctx = grammarDKNParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            localctx = grammarDKNParser.FunctionDefRuleContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(grammarDKNParser.FUNCTION)
            self.state = 20
            self.match(grammarDKNParser.VARIABLE)
            self.state = 21
            self.match(grammarDKNParser.T__0)
            self.state = 30
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==52:
                self.state = 22
                self.match(grammarDKNParser.VARIABLE)
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 23
                    self.match(grammarDKNParser.T__1)
                    self.state = 24
                    self.match(grammarDKNParser.VARIABLE)
                    self.state = 29
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 32
            self.match(grammarDKNParser.T__2)
            self.state = 33
            self.match(grammarDKNParser.T__3)
            self.state = 35 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self.statement()
                self.state = 37 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8505821819336514) != 0)):
                    break

            self.state = 39
            self.match(grammarDKNParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return grammarDKNParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReturnVoidContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnVoid" ):
                return visitor.visitReturnVoid(self)
            else:
                return visitor.visitChildren(self)


    class StackPushStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(grammarDKNParser.VARIABLE, 0)
        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStackPushStmt" ):
                return visitor.visitStackPushStmt(self)
            else:
                return visitor.visitChildren(self)


    class AsignacionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(grammarDKNParser.VARIABLE, 0)
        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)


    class IfStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.StatementContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)


    class QueueEnqueueStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(grammarDKNParser.VARIABLE, 0)
        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueueEnqueueStmt" ):
                return visitor.visitQueueEnqueueStmt(self)
            else:
                return visitor.visitChildren(self)


    class WhileStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.StatementContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class PrintCommandContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintCommand" ):
                return visitor.visitPrintCommand(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)


    class PrintExprContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpr" ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)


    class ForStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.ExprContext,i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.StatementContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.StatementContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = grammarDKNParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = grammarDKNParser.PrintCommandContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(grammarDKNParser.T__5)
                self.state = 42
                self.match(grammarDKNParser.T__0)
                self.state = 43
                self.expr(0)
                self.state = 44
                self.match(grammarDKNParser.T__2)
                self.state = 45
                self.match(grammarDKNParser.T__6)
                pass

            elif la_ == 2:
                localctx = grammarDKNParser.ReturnStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(grammarDKNParser.T__7)
                self.state = 48
                self.expr(0)
                self.state = 49
                self.match(grammarDKNParser.T__6)
                pass

            elif la_ == 3:
                localctx = grammarDKNParser.ReturnVoidContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.match(grammarDKNParser.T__7)
                self.state = 52
                self.match(grammarDKNParser.T__6)
                pass

            elif la_ == 4:
                localctx = grammarDKNParser.StackPushStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.match(grammarDKNParser.T__8)
                self.state = 54
                self.match(grammarDKNParser.T__0)
                self.state = 55
                self.match(grammarDKNParser.VARIABLE)
                self.state = 56
                self.match(grammarDKNParser.T__1)
                self.state = 57
                self.expr(0)
                self.state = 58
                self.match(grammarDKNParser.T__2)
                self.state = 59
                self.match(grammarDKNParser.T__6)
                pass

            elif la_ == 5:
                localctx = grammarDKNParser.QueueEnqueueStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 61
                self.match(grammarDKNParser.T__9)
                self.state = 62
                self.match(grammarDKNParser.T__0)
                self.state = 63
                self.match(grammarDKNParser.VARIABLE)
                self.state = 64
                self.match(grammarDKNParser.T__1)
                self.state = 65
                self.expr(0)
                self.state = 66
                self.match(grammarDKNParser.T__2)
                self.state = 67
                self.match(grammarDKNParser.T__6)
                pass

            elif la_ == 6:
                localctx = grammarDKNParser.PrintExprContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 69
                self.expr(0)
                self.state = 70
                self.match(grammarDKNParser.T__6)
                pass

            elif la_ == 7:
                localctx = grammarDKNParser.AsignacionContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 72
                self.match(grammarDKNParser.VARIABLE)
                self.state = 73
                self.match(grammarDKNParser.T__10)
                self.state = 74
                self.expr(0)
                self.state = 75
                self.match(grammarDKNParser.T__6)
                pass

            elif la_ == 8:
                localctx = grammarDKNParser.IfStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 77
                self.match(grammarDKNParser.T__11)
                self.state = 78
                self.match(grammarDKNParser.T__0)
                self.state = 79
                self.expr(0)
                self.state = 80
                self.match(grammarDKNParser.T__2)
                self.state = 81
                self.match(grammarDKNParser.T__3)
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 82
                    self.statement()
                    self.state = 85 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8505821819336514) != 0)):
                        break

                self.state = 87
                self.match(grammarDKNParser.T__4)
                pass

            elif la_ == 9:
                localctx = grammarDKNParser.ForStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 89
                self.match(grammarDKNParser.T__12)
                self.state = 90
                self.match(grammarDKNParser.T__0)
                self.state = 91
                self.expr(0)
                self.state = 92
                self.match(grammarDKNParser.T__6)
                self.state = 93
                self.expr(0)
                self.state = 94
                self.match(grammarDKNParser.T__6)
                self.state = 95
                self.expr(0)
                self.state = 96
                self.match(grammarDKNParser.T__2)
                self.state = 97
                self.match(grammarDKNParser.T__3)
                self.state = 99 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 98
                    self.statement()
                    self.state = 101 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8505821819336514) != 0)):
                        break

                self.state = 103
                self.match(grammarDKNParser.T__4)
                pass

            elif la_ == 10:
                localctx = grammarDKNParser.WhileStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 105
                self.match(grammarDKNParser.T__13)
                self.state = 106
                self.match(grammarDKNParser.T__0)
                self.state = 107
                self.expr(0)
                self.state = 108
                self.match(grammarDKNParser.T__2)
                self.state = 109
                self.match(grammarDKNParser.T__3)
                self.state = 111 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 110
                    self.statement()
                    self.state = 113 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8505821819336514) != 0)):
                        break

                self.state = 115
                self.match(grammarDKNParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return grammarDKNParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class TanhFuncContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTanhFunc" ):
                return visitor.visitTanhFunc(self)
            else:
                return visitor.visitChildren(self)


    class RootFuncContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRootFunc" ):
                return visitor.visitRootFunc(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class VarContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(grammarDKNParser.VARIABLE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)


    class PiConstContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PI(self):
            return self.getToken(grammarDKNParser.PI, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPiConst" ):
                return visitor.visitPiConst(self)
            else:
                return visitor.visitChildren(self)


    class SqrtFuncContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSqrtFunc" ):
                return visitor.visitSqrtFunc(self)
            else:
                return visitor.visitChildren(self)


    class FloorFuncContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloorFunc" ):
                return visitor.visitFloorFunc(self)
            else:
                return visitor.visitChildren(self)


    class CeilFuncContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCeilFunc" ):
                return visitor.visitCeilFunc(self)
            else:
                return visitor.visitChildren(self)


    class SumaRestaContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSumaResta" ):
                return visitor.visitSumaResta(self)
            else:
                return visitor.visitChildren(self)


    class AssignExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(grammarDKNParser.VARIABLE, 0)
        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignExpr" ):
                return visitor.visitAssignExpr(self)
            else:
                return visitor.visitChildren(self)


    class AbsFuncContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAbsFunc" ):
                return visitor.visitAbsFunc(self)
            else:
                return visitor.visitChildren(self)


    class MatrixInvContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(grammarDKNParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatrixInv" ):
                return visitor.visitMatrixInv(self)
            else:
                return visitor.visitChildren(self)


    class MulDivModContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a grammarDKNParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammarDKNParser.ExprContext)
            else:
                return self.getTypedRuleContext(grammarDKNParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDivMod" ):
                return visitor.visitMulDivMod(self)
            else:
                return visitor.visitChildren(self)

